--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/material": "^5.10.11",
     "@tanstack/react-query": "^4.13.0",
     "@tanstack/react-query-devtools": "^4.13.0",
     "d3-dsv": "^3.0.1",
+    "highcharts": "^10.2.1",
+    "highcharts-react-official": "^3.1.0",
     "ky": "^0.31.4",
     "ky-universal": "^0.11.0",
     "next": "12.3.1",
@@ -19,6 +24,7 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@types/d3-dsv": "^3.0.0",
     "@types/node": "18.11.5",
     "@types/react": "18.0.22",
